--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
       <div class=" col-12  col-lg-6 px-lg-3   ">
         <div class="col-12 rounded-5 bg-white">
           <div class="">
-            <img class="rounded-5 p-lg-5 p-xl-5 " src="https://mobirise.com/extensions/toolm5/t-shirt-design/assets/images/mbr.jpeg"
-              height="100%" width="100% " alt="">
+            <img class="rounded-5 p-lg-5 p-xl-5 "
+              src="https://mobirise.com/extensions/toolm5/t-shirt-design/assets/images/mbr.jpeg" height="100%"
+              width="100% " alt="">
           </div>
           <h1 class="display-3 text-center">Unique T-Shirt</h1>
           <div class="container-fluid">
@@ -187,28 +188,29 @@
             <h4 class="border-bottom rounded-3 text-start">Unique T-Shirt Design</h4>
           </div>
           <div>
-            <h2 class="p-xl-5 mt-xl-4 p-lg-2  text-start fs-4 p-5 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id orci nec
+            <h2 class="p-xl-5 mt-xl-4 p-lg-2  text-start fs-4 p-5 ">Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit. Nam id orci nec
               lectus lacinia tempus. Praesent nec quam mollis turpis eleifend consequat.</h2>
 
-            <h2 class="p-xl-5 p-lg-2 text-start fs-4 p-5 ">Phasellus euismod maximus ipsum vehicula vehicula. Mauris posuere risus nec purus
+            <h2 class="p-xl-5 p-lg-2 text-start fs-4 p-5 ">Phasellus euismod maximus ipsum vehicula vehicula. Mauris
+              posuere risus nec purus
               dapibus semper
               sed id ligula. Integer massa lorem, fringilla vel eros.</h2>
 
-              <div class="container-fluid p-xxl-4 p-lg-5 p-xl-3 mt-xxl-5 mt-xl-0">
-                <div class="row p-3 p-xl-0 p-xxl-3">
-                  <div class="col-6 justify-content-start d-flex fs-5 viewal ">
-                    <button
-                      class=" butn bt shadow  btn-outline-info bg-white text-black   ">Buy
-                      for $59 </button>
-                  </div>
-                  <div class="col-6  d-flex justify-content-end">
-                    <button class=" butn bt fs-5  rounded-pill viewall shadow">View all &nbsp;<i
-                        class="fa-solid fa-chevron-right fs-6 p-0"></i></button>
-                  </div>
-    
-                  </a>
+            <div class="container-fluid p-xxl-4 p-lg-5 p-xl-3 mt-xxl-5 mt-xl-0">
+              <div class="row p-3 p-xl-0 p-xxl-3">
+                <div class="col-6 justify-content-start d-flex fs-5 viewal ">
+                  <button class=" butn bt shadow  btn-outline-info bg-white text-black   ">Buy
+                    for $59 </button>
                 </div>
+                <div class="col-6  d-flex justify-content-end">
+                  <button class=" butn bt fs-5  rounded-pill viewall shadow">View all &nbsp;<i
+                      class="fa-solid fa-chevron-right fs-6 p-0"></i></button>
+                </div>
+
+
               </div>
+            </div>
 
           </div>
         </div>
@@ -217,7 +219,7 @@
     </div>
   </div>
 
-
+<div>hgsujhsvhj</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
