--- a/index.html
+++ b/index.html
@@ -220,6 +220,26 @@
   </div>
 
 
+  <section data-bs-version="5" class="content3 cid-sHc03OmBxC" id="content03-6">
+    
+    <div class="container-lg p-5 mt-lg-4 mt-2">
+        <div class="row justify-content-center p-5 p-lg-0">
+            <div class="col-12 col-md p-0 p-md-5">
+                <h5 class=" mb-4 display-5 text-lg-start text-xl-center">About Us</h5>
+                
+            </div>
+            <div class="col-md-12 col-lg-8 p-0 p-md-5 border-start">
+                <p class=" display-7 ms-3 ms-sm-2">Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis elit, faucibus at tincidunt vel,
+                    ultrices vitae mauris. Pellentesque nec ante nisi. Praesent posuere dignissim nibh in finibus. Nunc
+                    rutrum nibh pellentesque, viverra dolor quis, sollicitudin libero. Duis non elit feugiat maximus.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
